[package]
name = "tonic_openssl_lnd"
version = "0.1.4"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>", "Jonathan Zernik <yzernik@gmail.com>"]
edition = "2018"
description = "An async library implementing LND RPC via tonic_openssl and prost"
homepage = "https://github.com/yzernik/tonic_openssl_lnd"
repository = "https://github.com/yzernik/tonic_openssl_lnd"
readme = "README.md"
keywords = ["LND", "rpc", "grpc", "tonic", "async"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "network-programming"]
license = "MITNFA"

[lib]
doctest = false

[dependencies]
tonic = "0.7"
tonic-openssl = { version = "0.2" }
hyper = "0.14"
hyper-openssl = "0.9"
prost = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
openssl = "0.10"
tower = "0.4"
pretty_env_logger = "0.4.0"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.7"
