[package]
name = "tonic_lnd"
version = "0.5.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"
description = "An async library implementing LND RPC via tonic and prost"
homepage = "https://github.com/Kixunil/tonic_lnd"
repository = "https://github.com/Kixunil/tonic_lnd"
readme = "README.md"
keywords = ["LND", "rpc", "grpc", "tonic", "async"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "network-programming"]
license = "MITNFA"

[features]
lightningrpc = []
walletrpc = []
all = ["lightningrpc", "walletrpc"]

[dependencies]
tonic = { version = "0.6.2", features = ["transport", "tls"] }
prost = "0.9.0"
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
webpki = "0.21.3"
rustls-pemfile = "1.0.0"
hex = "0.4.3"
tokio = { version = "1.7.1", features = ["fs"] }
tracing = { version = "0.1", features = ["log"], optional = true }

[build-dependencies]
tonic-build = "0.5.2"

[dev-dependencies]
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
